objects/Pre_sales_TechnicalSupport_Request_Table__c.object
<CustomObject>
    <description>Details of Territory wise Sales Rep, Sales Leader and Specialist Leader is maintained in this object for Pre-sales Technical Support Approval Request Process</description>
    <label>Pre Sales Technical Support Approval</label>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pre Sales Technical Support Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Sale_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sale Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pre_sales_TechnicalSupport_Request_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pre_sales_TechnicalSupport_Request_Tabl1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specialist_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Specialist has an existing SFDC account</inlineHelpText>
        <label>Specialist Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pre_sales_TechnicalSupport_Request_Tabl2</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>